--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,51 @@
-body {
+.landing {
+	background-image: url(../images/nexus.gif);
+    float: left;
+    width: 100%;
+    position: relative;
+}
+.index{
 	background-image: url(../images/water.jpg);
+    float: left;
+    width: 100%;
+    position: relative;
 }
-.container{
-	max-width: 960px; /*so layout wont expand*/ margin: auto;
+
+.section1{
+	background-image: url(../images/blackandwhite.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 400px;
+    width: 100%;
+    float: left;
 }
+
+h4, h1{
+	text-align: center;
+	color: white;
+
+}
+
+.support {
+	background-image: url(../images/background.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    width: 100%;
+}
+/*.container{
+	max-width: 960px;
+	margin: auto;
+}*/
 h2{
 	background-color: yellow;
 	text-align: center;
@@ -15,19 +57,19 @@ h3, p{
 	padding: 10px;
 }
 .gallery{
-	background: black;
+	background: opacity;
 	min-height: 400px;
 }
 .gallery > .column{ 
-	border: 1px solid black; 
+	border: 1px solid opacity; 
 	background-color: 0;
 	width: 23%;  
 	float: left;
 }
 img[alt*="gallery"] { /*all img*/
-	border: 1px solid black; 
-	width: 250px; /*full each col*/ 
-	height: 250px;
+	border: 1px solid opacity; 
+	width: 280px; /*full each col*/ 
+	height: 280px;
 	border-radius: 300px; 
 	display: block;
 	float: left;
@@ -36,18 +78,45 @@ img[alt*="gallery"] { /*all img*/
 
 
 .footer{
-	height: 35px; 
-	background-color: rgb(0, 150, 150);
+	padding-top: 300px;	
+	background-color: opacity;
 }
 .socmed{
 	float: right; 
+	height: 60px; 
 }
 img[alt*="social"] { /*all img*/ 
-	border: 1px solid gray;
+	border: 1px rgb(0, 250, 250);
 	width: 30px; /*full each col*/ 
 	height: 30px; 
 	border-radius: 30px; 
 	display: block;
 	float: left;
 	margin-right: 10px; 
+}
+
+
+/*Tablet Style*/
+@media only screen and (min-width: 401px) and (max-width: 960px){
+
+body{
+	float: left;
+	height: auto;
+	width: 100%;
+}
+}
+
+
+/*Mobile Style*/
+@media only screen and (max-width: 400px) {
+.nav{
+	position: absolute;
+	float: left;
+	width: 100%;
+	height: auto;	
+}
+body {
+	float: left;
+	width: 100%;
+}
 }
