--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,10 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 .landing {
 	background-image: url(../images/nexus.gif);
-    float: left;
-    width: 100%;
-    position: relative;
-}
-.index{
-	background-image: url(../images/water.jpg);
     float: left;
     width: 100%;
     position: relative;
@@ -24,14 +23,21 @@
     width: 100%;
     float: left;
 }
-
-h4, h1{
-	text-align: center;
-	color: white;
-
+.jumbotron{
+	background-color: transparent;
 }
 
-.support {
+h4{
+	text-align: center;
+	color: white;
+}
+h1{
+	text-align: center;
+	color: white;
+	
+}
+
+.index, .support{
 	background-image: url(../images/background.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -41,6 +47,24 @@ h4, h1{
     background-position: center;
     background-attachment: fixed;
     width: 100%;
+}
+.photography, .tutorials, .travels {
+	background-image: url(../images/water.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    width: 100%;
+}
+.gallery1{
+	height: 340px;
+	width: 340px;
+}
+.card{
+	background-color: transparent;
 }
 /*.container{
 	max-width: 960px;
@@ -56,25 +80,32 @@ h3, p{
 	color: gray;
 	padding: 10px;
 }
-.gallery{
+.portfolio{
 	background: opacity;
 	min-height: 400px;
 }
-.gallery > .column{ 
+.portfolio > .column{ 
 	border: 1px solid opacity; 
 	background-color: 0;
 	width: 23%;  
 	float: left;
 }
-img[alt*="gallery"] { /*all img*/
-	border: 1px solid opacity; 
-	width: 280px; /*full each col*/ 
-	height: 280px;
-	border-radius: 300px; 
+img[alt*="portfolio"] { /*all img*/ 
+	border: 1px rgb(0, 250, 250);
+	width: 170px; /*full each col*/ 
+	height: 200px; 
+	border-radius: 30px; 
 	display: block;
 	float: left;
-	margin-top: 30px;
-} 
+	margin-left: 1px;
+}
+img[alt*="photo"] { /*all img*/ 
+	width: 100%; /*full each col*/ 
+	height: auto; 
+	display: block;
+	float: left;
+	margin-bottom: 20px;
+}
 
 
 .footer{
@@ -96,8 +127,9 @@ img[alt*="social"] { /*all img*/
 }
 
 
-/*Tablet Style*/
-@media only screen and (min-width: 401px) and (max-width: 960px){
+
+/*Tablet Medium devices (tablets, less than 992px)*/
+@media (max-width: 991.98px) {
 
 body{
 	float: left;
@@ -107,16 +139,13 @@ body{
 }
 
 
-/*Mobile Style*/
-@media only screen and (max-width: 400px) {
-.nav{
-	position: absolute;
-	float: left;
-	width: 100%;
-	height: auto;	
+/*Mobile Small devices (landscape phones, less than 768px)*/
+@media (max-width: 767.98px) {
+
 }
-body {
-	float: left;
-	width: 100%;
-}
+
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {
+
 }
