--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
 .landing {
 	background-image: url(../images/nexus.gif);
     float: left;
-    width: 100%;
-    position: relative;
+    width: 100%; 
+    height: 100%;
 }
 
 .section1{
@@ -23,8 +23,8 @@
     width: 100%;
     float: left;
 }
-.jumbotron{
-	background-color: transparent;
+.btn{
+	animation-iteration-count: infinite;
 }
 
 h4{
@@ -37,7 +37,7 @@ h1{
 	
 }
 
-.index, .support{
+.index, .support, .faq{
 	background-image: url(../images/background.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -47,6 +47,8 @@ h1{
     background-position: center;
     background-attachment: fixed;
     width: 100%;
+    height: auto;
+    float: left;
 }
 .photography, .tutorials, .travels {
 	background-image: url(../images/water.jpg);
@@ -58,14 +60,14 @@ h1{
     background-position: center;
     background-attachment: fixed;
     width: 100%;
+    float: left;
 }
 .gallery1{
-	height: 340px;
-	width: 340px;
+	height: 240px;
+	width: 240px;
+	margin-left: 30px;
 }
-.card{
-	background-color: transparent;
-}
+
 /*.container{
 	max-width: 960px;
 	margin: auto;
@@ -80,6 +82,7 @@ h3, p{
 	color: gray;
 	padding: 10px;
 }
+
 .portfolio{
 	background: opacity;
 	min-height: 400px;
@@ -104,17 +107,30 @@ img[alt*="photo"] { /*all img*/
 	height: auto; 
 	display: block;
 	float: left;
-	margin-bottom: 20px;
+}
+img[alt*="profile"] { /*all img*/ 
+	border: 1px rgb(0, 250, 250);
+	width: 200px; /*full each col*/ 
+	height: 200px; 
+	border-radius: 30px; 
+	display: block;
+	float: left;
+	margin-left: 20px;
+}
+.footer{
+	background-color: opacity;
+	padding-top: 37px;
+	display: block;
 }
 
-
-.footer{
-	padding-top: 300px;	
+.footer-main{
+	padding-top: 195px;	
 	background-color: opacity;
 }
 .socmed{
 	float: right; 
 	height: 60px; 
+
 }
 img[alt*="social"] { /*all img*/ 
 	border: 1px rgb(0, 250, 250);
@@ -125,7 +141,9 @@ img[alt*="social"] { /*all img*/
 	float: left;
 	margin-right: 10px; 
 }
-
+.sub-category{
+	float: left;
+}
 
 
 /*Tablet Medium devices (tablets, less than 992px)*/
@@ -133,19 +151,26 @@ img[alt*="social"] { /*all img*/
 
 body{
 	float: left;
-	height: auto;
+	height: 100vh;
 	width: 100%;
+}
+.footer-main{
+	padding-top: 300px;	
+	background-color: opacity;
 }
 }
 
 
 /*Mobile Small devices (landscape phones, less than 768px)*/
 @media (max-width: 767.98px) {
-
+body{
+	float: left;
+	height: auto;
+	width: 100%;
+}
+.footer-main{
+	padding-top: 0;	
+	background-color: opacity;
+}
 }
 
-
-// Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) {
-
-}
