--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,14 @@
 }
 .landing {
 	background-image: url(../images/nexus.gif);
+	background-size: cover;
     float: left;
     width: 100%; 
     height: 100%;
 }
-
+audio{
+	visibility: hidden;
+}
 .section1{
 	background-image: url(../images/blackandwhite.jpg);
 	background-size: cover;
@@ -19,25 +22,21 @@
     -o-background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    height: 400px;
+    height: 410px;
     width: 100%;
     float: left;
 }
-.btn{
+.btn:hover{
 	animation-iteration-count: infinite;
 }
 
-h4{
+h4, h1, h6{
 	text-align: center;
 	color: white;
-}
-h1{
-	text-align: center;
-	color: white;
-	
+	font-family: 'Roboto', sans-serif;
 }
 
-.index, .support, .faq{
+.port, .index, .support, .faq, .about, .contact{
 	background-image: url(../images/background.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -62,27 +61,111 @@ h1{
     width: 100%;
     float: left;
 }
+.test{
+	background-image: url(../images/travel2.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    width: 100%;
+    height: 890px;
+    padding-top: 200px;
+    float: left;
+}
+.testi{
+	background-image: url(../images/travel4.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    width: 100%;
+    height: 890px;
+    padding-top: 200px;
+    float: left;
+}
+.testing{
+	background-image: url(../images/paris001.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    width: 100%;
+    height: 890px;
+    padding-top: 200px;
+    float: left;
+}
+span{
+	font-size: 20px;
+	margin-left: auto;
+	display: block;	
+}
 .gallery1{
 	height: 240px;
 	width: 240px;
 	margin-left: 30px;
+}
+img[alt*="portfolio"]:hover {
+	transform: scale(1.0,1.1);
+	transition: transform 1s;
+}
+img[alt*="social"]:hover {
+	transform: scale(1.5,1.5);
+	transition: transform 1s;
+}
+img[alt*="tutor"]:hover {
+	transform: scale(1.1,1.2);
+	transition: transform 1s;
 }
 
 /*.container{
 	max-width: 960px;
 	margin: auto;
 }*/
-h2{
-	background-color: yellow;
-	text-align: center;
-	padding: 10px;
-}
-h3, p{
-	text-align: center;
-	color: gray;
-	padding: 10px;
-}
 
+h5, li, .bio, h2, h3, p{
+	text-align: center;
+	color: rgb(0,100,25);
+	padding: 10px;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+.progress{
+	width: 205px;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+	border: 1px solid black;
+}
+.html, .css, .bootstrap{ 
+	width: 80%; 
+}
+.jquery, .javascript{
+	width: 50%;
+}
+.mysql, .php, .laravel{
+	width: 10%;
+}
+ol, li{
+	margin: 10px;
+}
+.profile{
+	height: 350px;
+	width: 350px;
+	border-radius: 100%;
+	border: 1px solid #808080;
+	margin: 50px;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+}
 .portfolio{
 	background: opacity;
 	min-height: 400px;
@@ -144,7 +227,13 @@ img[alt*="social"] { /*all img*/
 .sub-category{
 	float: left;
 }
-
+/*Desktop devices (landscape phones, less than 1200px)*/
+@media (max-width: 1399.98px) {
+body{
+	float: left;
+	height: auto;
+	width: 100%;
+}
 
 /*Tablet Medium devices (tablets, less than 992px)*/
 @media (max-width: 991.98px) {
