--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,13 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+.navbar{
+    background-color: #808080;
+    opacity: 0.5;
+    filter: Alpha(opacity=50);
+}
+
 .landing {
 	background-image: url(../images/nexus.gif);
 	background-size: cover;
@@ -33,7 +40,7 @@ audio{
 h4, h1, h6{
 	text-align: center;
 	color: white;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Merienda', cursive;
 }
 
 .port, .index, .support, .faq, .about, .contact{
@@ -149,7 +156,7 @@ h5, li, .bio, h2, h3, p{
 	text-align: center;
 	color: rgb(0,100,25);
 	padding: 10px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 .progress{
 	width: 205px;
@@ -227,8 +234,8 @@ img[alt*="profile"] { /*all img*/
 .socmed{
 	float: right; 
 	height: 60px; 
-
 }
+
 img[alt*="social"] { /*all img*/ 
 	border: 1px rgb(0, 250, 250);
 	width: 30px; /*full each col*/ 
