--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Shadows Into Light', cursive;
 }
 
 .navbar{
@@ -41,7 +40,7 @@ audio{
 h4, h1, h6{
 	text-align: center;
 	color: white;
-	font-family: 'Shadows Into Light', cursive;
+	font-family: 'Merienda', cursive;
 }
 
 .port, .index, .support, .faq, .about, .contact{
@@ -58,7 +57,7 @@ h4, h1, h6{
     float: left;
 }
 .photography, .tutorials, .travels {
-	background-image: url(../images/waterdrop.gif);
+	background-image: url(../images/background1.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
@@ -157,7 +156,7 @@ h5, li, .bio, h2, h3, p{
 	text-align: center;
 	color: rgb(0,100,25);
 	padding: 10px;
-	font-family: 'Dancing Script', cursive;
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 .progress{
 	width: 205px;
