--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,19 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-
-.navbar{
-    background-color: #0;
+.navbarr{
+    background-color: black;
     opacity: 0.50;
     filter: Alpha(opacity=50);
 }
-
+.navbar{
+    background-color: #004040;
+    opacity: 0.50;
+    filter: Alpha(opacity=50);
+}
 .landing {
 	background-image: url(../images/nexus.gif);
-	background-size: cover;
+
     float: left;
     width: 100%; 
     height: 100%;
@@ -33,15 +36,16 @@ audio{
     width: 100%;
     float: left;
 }
-.btn:hover{
+/*.btn:hover{
 	animation-iteration-count: infinite;
-}
+}*/
 
 h4, h1, h6{
 	text-align: center;
 	color: white;
 	font-family: 'Merienda', cursive;
 }
+
 
 .port, .index, .support, .faq, .about, .contact{
 	background-image: url(../images/background.jpg);
@@ -111,7 +115,7 @@ h4, h1, h6{
     float: left;
 }
 .testp{
-	background-image: url(../images/background.jpg);
+	background-image: url(../images/psalm139.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
