--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h4, h1, h6{
     float: left;
 }
 .photography, .tutorials, .travels {
-	background-image: url(../images/background1.jpg);
+	background-image: url(../images/water.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
